add hover to buttons

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <h1>Kata Masszázs</h1>
                 <p>Szabadulj meg a stressztől, engedd el a feszültséget.</p>
                 <div class="banner-btn">
-                    <a href="#">Rólam</a>
-                    <a href="#">Bejelentkezés</a>
+                    <a href="#"><span></span>Rólam</a>
+                    <a href="#"><span></span>Bejelentkezés</a>
                 </div>
             </div>
         </section>
