--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <section id="banner">
             <img class="logo" src="images/logo1.png" alt="logo" />
             <div class="banner-text">
-                <h1>Kata Masszázs</h1>
+                <h1>Kata masszázs</h1>
                 <p>Szabadulj meg a stressztől, engedd el a feszültséget.</p>
                 <div class="banner-btn">
                     <a href="#"><span></span>Rólam</a>
@@ -24,5 +24,19 @@
                 </div>
             </div>
         </section>
+        <div id="sideNav">
+            <nav>
+                <ul>
+                    <li><a href="#">Főoldal</a></li>
+                    <li><a href="#">Rólam</a></li>
+                    <li><a href="#">Szolgáltatások</a></li>
+                    <li><a href="#">Árak</a></li>
+                    <li><a href="#">Kapcsolat</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div id="menuBtn">
+            <img id="menu" src="images/menu.png" alt="" />
+        </div>
     </body>
 </html>
