add menu moving

--- a/index.html
+++ b/index.html
@@ -38,5 +38,7 @@
         <div id="menuBtn">
             <img id="menu" src="images/menu.png" alt="" />
         </div>
+
+        <script src="script.js"></script>
     </body>
 </html>
