start about me section

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
             <img id="menu" src="images/menu.png" alt="" />
         </div>
 
+        <!-- About me -->
+
         <script src="script.js"></script>
     </body>
 </html>
