about me section ready

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
             href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Kaushan+Script&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
             rel="stylesheet"
         />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+            integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
     </head>
     <body>
         <section id="banner">
@@ -19,7 +26,7 @@
                 <h1>Kata masszázs</h1>
                 <p>Szabadulj meg a stressztől, engedd el a feszültséget.</p>
                 <div class="banner-btn">
-                    <a href="#"><span></span>Rólam</a>
+                    <a href="#aboutMe"><span></span>Bemutatkozás</a>
                     <a href="#"><span></span>Bejelentkezés</a>
                 </div>
             </div>
@@ -28,7 +35,7 @@
             <nav>
                 <ul>
                     <li><a href="#">Főoldal</a></li>
-                    <li><a href="#">Rólam</a></li>
+                    <li><a href="#aboutMe">Bemutatkozás</a></li>
                     <li><a href="#">Szolgáltatások</a></li>
                     <li><a href="#">Árak</a></li>
                     <li><a href="#">Kapcsolat</a></li>
@@ -40,6 +47,40 @@
         </div>
 
         <!-- About me -->
+
+        <section id="aboutMe">
+            <div class="title-text">
+                <h2>Bemutatkozás</h2>
+            </div>
+            <div class="aboutMe-box">
+                <div class="aboutMe">
+                    <h2>Tóth Kata</h2>
+                    <div class="aboutMe-desc">
+                        <div class="aboutMe-icon">
+                            <i class="fa fa-spa"></i>
+                        </div>
+                        <div class="aboutMe-text">
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Consectetur nemo minima eos
+                                dignissimos fugit harum laboriosam in quis
+                                suscipit. Temporibus enim eius obcaecati, porro
+                                in consequuntur accusamus odio maiores!
+                                Deserunt. Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Consectetur nemo minima eos
+                                dignissimos fugit harum laboriosam in quis
+                                suscipit. Temporibus enim eius obcaecati, porro
+                                in consequuntur accusamus odio maiores!
+                                Deserunt.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="aboutMe-img">
+                    <img src="images/kata.jpg" alt="kata" />
+                </div>
+            </div>
+        </section>
 
         <script src="script.js"></script>
     </body>
