add new image to about me

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     </div>
                 </div>
                 <div class="aboutMe-img">
-                    <img src="images/kata.jpg" alt="kata" />
+                    <img src="images/kata.jpeg" alt="kata" />
                 </div>
             </div>
         </section>
