start services section

--- a/index.html
+++ b/index.html
@@ -82,6 +82,13 @@
             </div>
         </section>
 
+        <!-- Services -->
+        <section id="service">
+            <div class="title-text">
+                <h2>Szolgáltatások</h2>
+            </div>
+        </section>
+
         <script src="script.js"></script>
     </body>
 </html>
