add images and descriptions

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <ul>
                     <li><a href="#">Főoldal</a></li>
                     <li><a href="#aboutMe">Bemutatkozás</a></li>
-                    <li><a href="#">Szolgáltatások</a></li>
+                    <li><a href="#services">Szolgáltatások</a></li>
                     <li><a href="#">Árak</a></li>
                     <li><a href="#">Kapcsolat</a></li>
                 </ul>
@@ -83,9 +83,57 @@
         </section>
 
         <!-- Services -->
-        <section id="service">
+        <section id="services">
             <div class="title-text">
                 <h2>Szolgáltatások</h2>
+            </div>
+            <div class="service-box">
+                <div class="single-service">
+                    <img src="images/masszazs.jpg" alt="masszazs" />
+                    <div class="overlay"></div>
+                    <div class="service-desc">
+                        <h3>Masszázs</h3>
+                        <hr />
+                        <p>
+                            rövid masszázs leírás rövid masszázs leírás rövid
+                            masszázs leírás rövid masszázs leírás rövid masszázs
+                            leírás rövid masszázs leírás
+                        </p>
+                    </div>
+                </div>
+                <div class="single-service">
+                    <img src="images/kopoly.jpg" alt="masszazs" />
+                    <div class="overlay"></div>
+                    <h3>Köpölyözés</h3>
+                    <hr />
+                    <p>
+                        rövid masszázs leírás rövid masszázs leírás rövid
+                        masszázs leírás rövid masszázs leírás rövid masszázs
+                        leírás rövid masszázs leírás
+                    </p>
+                </div>
+                <div class="single-service">
+                    <img src="images/kinesio.jpeg" alt="masszazs" />
+                    <div class="overlay"></div>
+                    <h3>Kinezio tapasz</h3>
+                    <hr />
+                    <p>
+                        rövid masszázs leírás rövid masszázs leírás rövid
+                        masszázs leírás rövid masszázs leírás rövid masszázs
+                        leírás rövid masszázs leírás
+                    </p>
+                </div>
+                <div class="single-service">
+                    <img src="images/nyirok.jpg" alt="masszazs" />
+                    <div class="overlay"></div>
+                    <h3>Nyirokmasszázs</h3>
+                    <hr />
+                    <p>
+                        rövid masszázs leírás rövid masszázs leírás rövid
+                        masszázs leírás rövid masszázs leírás rövid masszázs
+                        leírás rövid masszázs leírás
+                    </p>
+                </div>
             </div>
         </section>
 
