--- a/index.html
+++ b/index.html
@@ -95,44 +95,74 @@
                         <h3>Masszázs</h3>
                         <hr />
                         <p>
-                            rövid masszázs leírás rövid masszázs leírás rövid
-                            masszázs leírás rövid masszázs leírás rövid masszázs
-                            leírás rövid masszázs leírás
+                            A masszázs egy ősi terápia, amelynek célja a test és
+                            a lélek felfrissítése. Különféle technikákat
+                            alkalmazva segít a stressz oldásában, az izmok
+                            ellazításában és a vérkeringés javításában. A
+                            masszázs során a bőr, az izmok és a kötőszövetek
+                            stimulálása révén fokozódik a szervezet öngyógyító
+                            képessége, így támogatva az általános egészségi
+                            állapotot és a közérzet javulását.
                         </p>
                     </div>
                 </div>
                 <div class="single-service">
                     <img src="images/kopoly.jpg" alt="masszazs" />
                     <div class="overlay"></div>
-                    <h3>Köpölyözés</h3>
-                    <hr />
-                    <p>
-                        rövid masszázs leírás rövid masszázs leírás rövid
-                        masszázs leírás rövid masszázs leírás rövid masszázs
-                        leírás rövid masszázs leírás
-                    </p>
+                    <div class="service-desc">
+                        <h3>Köpölyözés</h3>
+                        <hr />
+                        <p>
+                            A köpölyözés egy tradicionális gyógyászati eljárás,
+                            amely során speciális üvegből, szilikonból vagy
+                            bambuszból készült csészéket helyeznek a bőrre, hogy
+                            vákuumot hozzanak létre. A vákuum hatására a bőr és
+                            a kötőszövetek enyhén megemelkednek, fokozva ezzel a
+                            vér- és nyirokkeringést. Ez a technika segít a
+                            méreganyagok eltávolításában, az izmok
+                            ellazításában, valamint a fájdalom és a gyulladás
+                            csökkentésében.
+                        </p>
+                    </div>
                 </div>
                 <div class="single-service">
                     <img src="images/kinesio.jpeg" alt="masszazs" />
                     <div class="overlay"></div>
-                    <h3>Kinezio tapasz</h3>
-                    <hr />
-                    <p>
-                        rövid masszázs leírás rövid masszázs leírás rövid
-                        masszázs leírás rövid masszázs leírás rövid masszázs
-                        leírás rövid masszázs leírás
-                    </p>
+                    <div class="service-desc">
+                        <h3>Kinezio tapasz</h3>
+                        <hr />
+                        <p>
+                            A kineziológiai tapasz, más néven kineziotape, egy
+                            rugalmas, bőrbarát ragasztószalag, amelyet az izmok,
+                            ízületek és ínszalagok támogatására használnak.
+                            Alkalmazásával segít stabilizálni a sérült
+                            területeket anélkül, hogy korlátozná a mozgást,
+                            miközben serkenti a vér- és nyirokkeringést. A
+                            tapasz csökkentheti a fájdalmat, elősegítheti a
+                            gyógyulást, és támogatja az izom- és ízületműködést,
+                            így gyakran használják sportolók és rehabilitációs
+                            kezelések során.
+                        </p>
+                    </div>
                 </div>
                 <div class="single-service">
                     <img src="images/nyirok.jpg" alt="masszazs" />
                     <div class="overlay"></div>
-                    <h3>Nyirokmasszázs</h3>
-                    <hr />
-                    <p>
-                        rövid masszázs leírás rövid masszázs leírás rövid
-                        masszázs leírás rövid masszázs leírás rövid masszázs
-                        leírás rövid masszázs leírás
-                    </p>
+                    <div class="service-desc">
+                        <h3>Nyirokmasszázs</h3>
+                        <hr />
+                        <p>
+                            A nyirokmasszázs, más néven nyirokdrenázs, egy
+                            speciális masszázstechnika, amely a nyirokrendszer
+                            működésének serkentésére irányul. Gyengéd, ritmikus
+                            mozdulatokkal segíti a nyirokfolyadék áramlását,
+                            ezáltal támogatva a méreganyagok eltávolítását és a
+                            szervezet immunrendszerének erősítését. A
+                            nyirokmasszázs hatékony lehet ödémák, duzzanatok
+                            csökkentésében, valamint a szervezet általános
+                            regenerációjában.
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
