--- a/index.html
+++ b/index.html
@@ -158,8 +158,7 @@
                             mozdulatokkal segíti a nyirokfolyadék áramlását,
                             ezáltal támogatva a méreganyagok eltávolítását és a
                             szervezet immunrendszerének erősítését. A
-                            nyirokmasszázs hatékony lehet ödémák, duzzanatok
-                            csökkentésében, valamint a szervezet általános
+                            nyirokmasszázs hatékony lehet a szervezet általános
                             regenerációjában.
                         </p>
                     </div>
