--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                     <li><a href="#">Főoldal</a></li>
                     <li><a href="#aboutMe">Bemutatkozás</a></li>
                     <li><a href="#services">Szolgáltatások</a></li>
-                    <li><a href="#">Árak</a></li>
-                    <li><a href="#">Kapcsolat</a></li>
+                    <li><a href="#prices">Árak</a></li>
+                    <li><a href="#connect">Kapcsolat</a></li>
                 </ul>
             </nav>
         </div>
@@ -163,6 +163,14 @@
                         </p>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section id="prices">
+            <div class="title-text">
+                <h2>Árlista</h2>
+            </div>
+            <div class="image-box">
+                <img src="images/arlista.jpeg" alt="" />
             </div>
         </section>
 
