--- a/index.html
+++ b/index.html
@@ -89,11 +89,12 @@
             </div>
             <div class="service-box">
                 <div class="single-service">
+                    <h3>Masszázs</h3>
                     <img src="images/masszazs.jpg" alt="masszazs" />
                     <div class="overlay"></div>
                     <div class="service-desc">
-                        <h3>Masszázs</h3>
-                        <hr />
+                        <!-- <h3>Masszázs</h3>
+                        <hr /> -->
                         <p>
                             A masszázs egy ősi terápia, amelynek célja a test és
                             a lélek felfrissítése. Különféle technikákat
@@ -107,11 +108,12 @@
                     </div>
                 </div>
                 <div class="single-service">
+                    <h3>Köpölyözés</h3>
                     <img src="images/kopoly.jpg" alt="masszazs" />
                     <div class="overlay"></div>
                     <div class="service-desc">
-                        <h3>Köpölyözés</h3>
-                        <hr />
+                        <!-- <h3>Köpölyözés</h3>
+                        <hr /> -->
                         <p>
                             A köpölyözés egy tradicionális gyógyászati eljárás,
                             amely során speciális üvegből, szilikonból vagy
@@ -126,11 +128,12 @@
                     </div>
                 </div>
                 <div class="single-service">
+                    <h3>Kinezio tapasz</h3>
                     <img src="images/kinesio.jpeg" alt="masszazs" />
                     <div class="overlay"></div>
                     <div class="service-desc">
-                        <h3>Kinezio tapasz</h3>
-                        <hr />
+                        <!-- <h3>Kinezio tapasz</h3>
+                        <hr /> -->
                         <p>
                             A kineziológiai tapasz, más néven kineziotape, egy
                             rugalmas, bőrbarát ragasztószalag, amelyet az izmok,
@@ -146,11 +149,12 @@
                     </div>
                 </div>
                 <div class="single-service">
+                    <h3>Nyirokmasszázs</h3>
                     <img src="images/nyirok.jpg" alt="masszazs" />
                     <div class="overlay"></div>
                     <div class="service-desc">
-                        <h3>Nyirokmasszázs</h3>
-                        <hr />
+                        <!-- <h3>Nyirokmasszázs</h3>
+                        <hr /> -->
                         <p>
                             A nyirokmasszázs, más néven nyirokdrenázs, egy
                             speciális masszázstechnika, amely a nyirokrendszer
