--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <p>Szabadulj meg a stressztől, engedd el a feszültséget.</p>
                 <div class="banner-btn">
                     <a href="#aboutMe"><span></span>Bemutatkozás</a>
-                    <a href="#"><span></span>Bejelentkezés</a>
+                    <a href="tel: +36301234567"><span></span>Bejelentkezés</a>
                 </div>
             </div>
         </section>
@@ -177,6 +177,35 @@
                 <img src="images/arlista.jpeg" alt="" />
             </div>
         </section>
+
+        <footer id="connect">
+            <img class="footer-img" src="images/logo1.png" alt="" />
+            <div class="title-text">
+                <h2>Kapcsolat</h2>
+            </div>
+            <div class="foglalas">
+                <h3>Időpont csak előzetes bejelentkezés alapján!</h3>
+            </div>
+            <div class="footer-row">
+                <div class="footer-left">
+                    <h3>Elérhetőségeim</h3>
+                    <p><i class="fa fa-phone"></i>+36301234567</p>
+                    <p><i class="fa fa-paper-plane"></i>info@katamasszazs.hu</p>
+                    <p><i class="fa fa-location-dot"></i>8241 Aszófő</p>
+                </div>
+                <div class="footer-right">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d21796.11989061432!2d17.81168646712192!3d46.93191670267267!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4769bcb4f9322d83%3A0x400c4290c1eb6e0!2zQXN6w7NmxZEsIDgyNDE!5e0!3m2!1shu!2shu!4v1724920926398!5m2!1shu!2shu"
+                        width="400"
+                        height="300"
+                        style="border: 0"
+                        allowfullscreen=""
+                        loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"
+                    ></iframe>
+                </div>
+            </div>
+        </footer>
 
         <script src="script.js"></script>
     </body>
