some viewport changes

--- a/index.html
+++ b/index.html
@@ -205,6 +205,13 @@
                     ></iframe>
                 </div>
             </div>
+            <div class="social-links">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <p>
+                    2024 <i class="fa-regular fa-copyright"></i> Kata Masszázs
+                </p>
+            </div>
         </footer>
 
         <script src="script.js"></script>
