--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </head>
     <body>
         <section id="banner">
-            <img class="logo" src="images/logo1.png" alt="logo" />
+            <img class="logo" src="images/logo.png" alt="logo" />
             <div class="banner-text">
                 <h1>Kata masszázs</h1>
                 <p>Szabadulj meg a stressztől, engedd el a feszültséget.</p>
@@ -53,7 +53,7 @@
                 <h2>Bemutatkozás</h2>
             </div>
             <div class="aboutMe-box">
-                <div class="aboutMe">
+                <div class="aboutMe animated">
                     <h2>Tóth Kata</h2>
                     <div class="aboutMe-desc">
                         <div class="aboutMe-icon">
@@ -76,7 +76,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="aboutMe-img">
+                <div class="aboutMe-img animated">
                     <img src="images/kata.jpeg" alt="kata" />
                 </div>
             </div>
@@ -88,7 +88,7 @@
                 <h2>Szolgáltatások</h2>
             </div>
             <div class="service-box">
-                <div class="single-service">
+                <div class="single-service animated">
                     <h3>Masszázs</h3>
                     <img src="images/masszazs.jpg" alt="masszazs" />
                     <div class="overlay"></div>
@@ -107,7 +107,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="single-service">
+                <div class="single-service animated">
                     <h3>Köpölyözés</h3>
                     <img src="images/kopoly.jpg" alt="masszazs" />
                     <div class="overlay"></div>
@@ -127,7 +127,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="single-service">
+                <div class="single-service animated">
                     <h3>Kinezio tapasz</h3>
                     <img src="images/kinesio.jpeg" alt="masszazs" />
                     <div class="overlay"></div>
@@ -148,7 +148,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="single-service">
+                <div class="single-service animated">
                     <h3>Nyirokmasszázs</h3>
                     <img src="images/nyirok.jpg" alt="masszazs" />
                     <div class="overlay"></div>
@@ -178,7 +178,7 @@
             </div>
         </section>
 
-        <footer id="connect">
+        <footer id="connect" class="animated">
             <img class="footer-img" src="images/logo1.png" alt="" />
             <div class="title-text">
                 <h2>Kapcsolat</h2>
